@@ -1,0 +1,7 @@
+#!/usr/bin/env perl
+
+use strict;
+use Warnings::Version '5.22';
+use feature 'bitwise';
+
+"foo" ^. "bar" or exit 0;
