@@ -1,0 +1,6 @@
+#!/usr/bin/env perl
+
+use strict;
+use Warnings::Version '5.22';
+
+my $sub = sub :const { 42 }
