@@ -1,0 +1,5 @@
+#!/usr/bin/env perl
+
+use strict;
+use Warnings::Version '5.22';
+use re 'strict';
